frontend/k3s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: starry-edu-frontend-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: starry-edu-frontend
